--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tiptap/pm": "^2.10.2",
     "@tiptap/react": "^2.10.2",
     "@tiptap/starter-kit": "^2.10.2",
+    "@tiptap/extension-link": "^2.10.2",
     "@types/qs": "^6.9.17",
     "auth": "^1.2.3",
     "class-variance-authority": "^0.7.0",
