--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -46,4 +46,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "pnpm"
       - run: pnpm install
-      - run: pnpm build
+      - name: Build the application
+        env:
+          BACK_END_SERVER: "http://localhost:8080"
+        run: pnpm build
