--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
+    "elkjs": "^0.9.3",
     "framer-motion": "^11.13.1",
     "htmlparser2": "^9.1.0",
     "immer": "^10.1.1",
@@ -70,6 +71,7 @@
     "react-hook-form": "^7.53.2",
     "react-image-crop": "^11.0.7",
     "react-medium-image-zoom": "^5.2.11",
+    "reactflow": "^11.11.4",
     "recharts": "^2.14.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
