--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.37.4",
+    "@dagrejs/dagre": "^1.1.4",
     "@dnd-kit/core": "^6.3.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
@@ -52,7 +53,6 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
-    "elkjs": "^0.9.3",
     "framer-motion": "^11.13.1",
     "htmlparser2": "^9.1.0",
     "immer": "^10.1.1",
@@ -72,7 +72,6 @@
     "react-hook-form": "^7.53.2",
     "react-image-crop": "^11.0.7",
     "react-medium-image-zoom": "^5.2.11",
-    "reactflow": "^11.11.4",
     "recharts": "^2.14.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
